# pi

./: .env.example  .gitignore  crewai_cloud_prompt.txt  main.py  pyproject.toml  requirements.txt  verify.py
agents/: comms_agent.py  orchestrator.py  os_agent.py  security_agent.py
config/: logger.py  settings.py
core/: brain.py  security.py  userbot.py
core/memory/: __init__.py  relational.py  semantic.py
interfaces/api/: __init__.py  server.py
interfaces/telegram/: __init__.py  keypads.py
interfaces/telegram/handlers/: __init__.py  base.py  chat.py  control.py
interfaces/telegram/middlewares/: __init__.py  auth.py
src/pi/: __init__.py  crew.py  main.py
src/pi/config/: agents.yaml  tasks.yaml
tools/: base.py  desktop_tools.py  registry.py  system_tools.py
