[project]
name = "pi"
version = "0.1.0"
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai>=0.28.0",
    "aiogram>=3.4.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic-settings>=2.2.0",
    "sqlalchemy>=2.0.0",
    "chromadb>=0.4.0",
    "pyautogui>=0.9.54",
    "mss>=9.0.1",
    "pillow>=10.2.0",
    "python-dotenv>=1.0.1",
    "telethon>=1.34.0"
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/pi",
    "agents",
    "config",
    "core",
    "tools",
    "interfaces"
]
